# ccr-ai

./: .gitignore  AGENTS.md  README.md  TODO.md  main.py  pyproject.toml
.claude/: settings.local.json
docs/: ai_overview.md  chu_chu_rocket_mechanics.md
scripts/: debug_bfs.py  generate_varied_corpus.py  interactive_visualize.py  train_bc.py  train_bc_seq_lite.py  train_bc_set.py  train_ppo.py  visualize_model.py
src/bfs_solver/: PRD.md  __init__.py  difficulty.py  solver.py
src/game/: actions.py  board.py  board_builder.py  engine.py  levels.py  movement.py  sprites.py  state.py  visualization.py
src/model/: model_loader.py  model_saver.py
src/perception/: PRD.md  __init__.py  cat_encoder.py  cnn_encoder.py  data_types.py  encoders.py  perception_prd.md  processors.py
src/policy/: PRD.md  __init__.py  action_utils.py  data_types.py  policy_prd.md  processors.py  value_head.py
src/puzzle_generator/: __init__.py  puzzle_config.py
src/state_fusion/: __init__.py  data_types.py  processors.py  state_fusion_prd.md
src/training/bc/: PRD.md  __init__.py  bc_sequence_lite_config.py  config.py  trainer.py  (+8 more)
src/util/: __init__.py  action_utils.py
src/visualizer/: __init__.py  interactive_visualizer.py  visualizer.py  visualizer_prd.md
tests/: test_policy.py  test_state_fusion.py
tests/bfs_solver/: __init__.py  test_solver.py
tests/game/: test_board.py  test_engine.py  test_puzzle_mode.py  test_sprites.py
tests/perception/: test_cat_encoder.py  test_cat_integration.py  test_full_pipeline.py  test_grid_encoder.py  test_integration.py  test_processors.py
(+16 files in other folders)
